fixed footer spacing and color

--- a/Applications/developers/css/main.css
+++ b/Applications/developers/css/main.css
@@ -156,7 +156,7 @@ a, a:focus, a:hover {
 .footer {
     width: 100%;
     height: 20vh;
-    background-color: #000;
+    background-color: lightblue;
     display: flex;
     align-items: center;
     justify-content: center;
